@startuml works

Work <|-- Route
Work <|-- Driver

class Route{
    id: int
    name: string
    distance: int
    days: int
    payment: int
}

class Driver{
    id: int
    surname: string
    name: string
    patronymic: string
    exp: int
}

class Work{
    id: int
    route: int references Route(id)
    driver: int references Driver(id)
    date_departure: string
    date_return: string
    premium: int
}

@enduml